# bookbinder

./: .gitignore  README.md  antiquarian.py  antiquarian_pandas.py  bookbinder.py  bookbinder_config.py  output.txt  pyproject.toml
openai_batch_api/: 0_batch_config.py  1_prepare_batch.py  2_upload_batch.py  3_create_batch.py  4_check_batch.py  5_retrieve_batch.py  batch.ipynb  batch_config.py  cancel_batch.py  finetune.ipynb  prepare_batch.py  prepare_batch_finetune.py  prepare_finetune.py  prompt.txt
utils/: ai.py  cost.py  utils.py
